[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/GUI/Sprite-0002-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/pause_sin.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/Sprite-0004-Sheet.png" type="Texture" id=3]
[ext_resource path="res://src/screens/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/font_resource.tres" type="DynamicFont" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 57, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 114, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 171, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 228, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 285, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 342, 0, 57, 62 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 399, 0, 57, 62 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 13, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 39, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 65, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 78, 0, 13, 62 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 91, 0, 13, 62 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 15 ), SubResource( 14 ), SubResource( 13 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFontData" id=19]
antialiased = false
font_path = "res://assets/fonts/Lilian.ttf"

[sub_resource type="DynamicFont" id=20]
size = 37
font_data = SubResource( 19 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxEmpty" id=32]

[sub_resource type="StyleBoxEmpty" id=33]

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="StyleBoxEmpty" id=35]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.5
margin_top = -119.5
margin_right = 110.5
margin_bottom = 119.5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animations" type="Control" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cable" type="Control" parent="Panel/Animations"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 153.0
margin_right = 181.0
margin_bottom = 199.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="AnimatedSprite" parent="Panel/Animations/Cable"]
frames = SubResource( 9 )
frame = 6
playing = true

[node name="Plug" type="Control" parent="Panel/Animations"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 74.5
margin_right = 40.0
margin_bottom = 119.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="AnimatedSprite" parent="Panel/Animations/Plug"]
frames = SubResource( 18 )
frame = 1
playing = true

[node name="Text" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="Panel/Text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.5
margin_top = 27.0
margin_right = 50.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 20 )
text = "Pause"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="Panel/Text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = -15.5
margin_right = 50.5
margin_bottom = 61.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Panel/Text/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_right = 43.0
margin_bottom = 27.0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
custom_fonts/font = ExtResource( 5 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Panel/Text/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -13.5
margin_right = 46.5
margin_bottom = 13.5
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/focus = SubResource( 28 )
custom_styles/disabled = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
custom_fonts/font = ExtResource( 5 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Panel/Text/Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.5
margin_top = -27.0
margin_right = 23.5
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/focus = SubResource( 33 )
custom_styles/disabled = SubResource( 34 )
custom_styles/normal = SubResource( 35 )
custom_fonts/font = ExtResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/Text/Buttons/Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_down" from="Panel/Text/Buttons/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="Panel/Text/Buttons/Exit" to="." method="_on_Exit_button_down"]
